Add testing dependency

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/max8hine/tennis-scoring-system#readme",
   "engines": {
     "node": ">=12.18.2"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0"
   }
 }
